gui_build_error.txt
    Checking legion-loq-control v0.1.0 (C:\Users\anand\Repos\Legion + Loq Controller)
warning: unused imports: `info` and `warn`
 --> src\legion_core\device\detect.rs:3:11
  |
3 | use log::{info, warn};
  |           ^^^^  ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: type `Win32_ComputerSystem` should have an upper camel case name
  --> src\platform\windows.rs:11:8
   |
11 | struct Win32_ComputerSystem {
   |        ^^^^^^^^^^^^^^^^^^^^ help: convert the identifier to upper camel case: `Win32ComputerSystem`
   |
   = note: `#[warn(non_camel_case_types)]` (part of `#[warn(nonstandard_style)]`) on by default

warning: type `Win32_Battery` should have an upper camel case name
  --> src\platform\windows.rs:17:8
   |
17 | struct Win32_Battery {
   |        ^^^^^^^^^^^^^ help: convert the identifier to upper camel case: `Win32Battery`

warning: type `Lenovo_BiosSetting` should have an upper camel case name
  --> src\platform\windows.rs:24:8
   |
24 | struct Lenovo_BiosSetting {
   |        ^^^^^^^^^^^^^^^^^^ help: convert the identifier to upper camel case: `LenovoBiosSetting`

warning: type `Win32_BIOS` should have an upper camel case name
  --> src\platform\windows.rs:29:8
   |
29 | struct Win32_BIOS {
   |        ^^^^^^^^^^ help: convert the identifier to upper camel case: `Win32Bios`

error[E0308]: mismatched types
  --> src\gui\mod.rs:16:24
   |
16 |         Box::new(|_cc| Ok(Box::new(app::LegionControlApp::default()))),
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Box<dyn App>`, found `Result<Box<LegionControlApp>, _>`
   |
   = note: expected struct `Box<(dyn App + 'static)>`
                found enum `Result<Box<LegionControlApp>, _>`

For more information about this error, try `rustc --explain E0308`.
warning: `legion-loq-control` (bin "legion-loq-control") generated 5 warnings
error: could not compile `legion-loq-control` (bin "legion-loq-control") due to 1 previous error; 5 warnings emitted
